force-app/main/default/objects/sugati__Selected_ICC_Copy__c/sugati__Selected_ICC_Copy__c.object-meta.xml
<CustomObject>
    <label>Selected ICC Copy</label>
    <nameField>
        <displayFormat>SICCO-{0000000000}</displayFormat>
        <label>Selected ICC Copy ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Selected ICCs Copy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>