force-app/main/default/objects/sugati__Selected_ICC_Copy__c/fields/sugati__SICCO_Category__c.field-meta.xml
<CustomField>
    <fullName>sugati__SICCO_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selected Itinerary Content Category</label>
    <referenceTo>sugati__Selected_Itinerary_Content_Category__c</referenceTo>
    <relationshipLabel>Selected ICCs Copy</relationshipLabel>
    <relationshipName>Selected_ICCs_Copy</relationshipName>
    <type>Lookup</type>
</CustomField>