force-app/main/default/objects/sugati__Selected_ICC_Copy__c/fields/sugati__SICCO_Confirmation_Letter__c.field-meta.xml
<CustomField>
    <fullName>sugati__SICCO_Confirmation_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmation Letter</label>
    <type>Checkbox</type>
</CustomField>