force-app/main/default/objects/sugati__Selected_ICC_Copy__c/fields/sugati__SICCO_Country__c.field-meta.xml
<CustomField>
    <fullName>sugati__SICCO_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>sugati__Country__c</referenceTo>
    <relationshipLabel>Selected ICCs Copy</relationshipLabel>
    <relationshipName>Selected_ICCs_Copy</relationshipName>
    <type>Lookup</type>
</CustomField>