force-app/main/default/objects/sugati__Selected_ICC_Copy__c/fields/sugati__SICCO_Description__c.field-meta.xml
<CustomField>
    <fullName>sugati__SICCO_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>