force-app/main/default/objects/sugati__Selected_ICC_Copy__c/fields/sugati__SICCO_Title__c.field-meta.xml
<CustomField>
    <fullName>sugati__SICCO_Title__c</fullName>
    <label>Title</label>
    <type>TextArea</type>
</CustomField>